# rolodex

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: csv.js  index.html  main.js  styles.css  vcard.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
