[package]
name = "rolodex"
version = "0.1.1"
description = "A native Rolodex-style contacts widget"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rolodex"
path = "src/main.rs"
